1.6.0
* Client: RPC API for mining (supports "getblocktemplate", "validateaddress" and "submitblock")
* Lib: fixed a critical issue of accepting a block hash which does not match the bits field from teh header
* Lib: fixed issue with recalculating difficulty each 2016 blocks that was appearing on testnet3

1.5.0 - 2016-03-16
* Client: Fixed maximul allowed message size for "getheaders" that was causing issues on testnet
* Client: Do not allow into the mempool transactions spending inmature coinbase inputs
* WebUI: Allows to specify the sequence number for Replace By Fee feature
* Wallet: By default tx's sequence numbers are same as currrent unix time. Can be overwritten with "-seq <val>"
* Client: Additional mining statistics
* Client: support for Web Wallets (volatile wallets provided by the browser, not kept on the server)
* Client: Implemented BIP 130 - Direct headers announcement
* Qdb: added "volatile mode" in which records are being written to disk only when closing the database
* Client: "client -r" rebuilds UTXO database in a volatile mode (should be much faster) and exits
* Headers-first blockchain sync
* ripemd160 and snappy libs has been included in the sources (GitHub repo)

1.4.1
* WebUI: More of teal time UI refresh (without reloading the pages)
* secp256k1: Fixed issue #15 - BaseMultiply returning wrong result for certain input values

1.4.0 - 2015-11-09
* peersdb: MinPeersInDB changed from 256 to 512
* Client: Added BIP100 stats to the mining UI
* Wallet: Added support for Type-4 wallet, which is based on BIP-32 keys derivation (HD wallets)
* Lib: Some changes to btc.WalletHD API
* WebUI: Real time UI refresh (without reloading the pages)
* Client/WebUI: Fixed double bug that occurred when switching "Listening for incoming TCP connections" on/off
* secp256k1: Force Low S values in ECDSA Sign function
* OP_CHECKLOCKTIMEVERIFY - BIP65 integreated into blocks version 4

1.2.0 - 2015-07-31
* Lib: enforce blocks version 3, starting from #364000